# uav-rf-terrain-planner

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: agent-build-feasibility.md  agent-operations-plan.md  github-app-limit-report.md  master-plan.md
examples/: local_candidate_source_zone_smoke.py  local_geotiff_adapter_smoke.py  local_real_terrain_candidate_analysis_smoke.py  local_real_terrain_launch_area_map_smoke.py  local_real_terrain_route_smoke.py  local_real_terrain_waypoint_smoke.py  local_source_zone_raster_smoke.py  sample_config.yaml  synthetic_adapter_profile.py  synthetic_end_to_end.py  synthetic_map_output.py  synthetic_minimum_altitude.py  synthetic_terrain.py  synthetic_terrain_data_adapter.py
scripts/: build_dsm_proxy_from_esa_worldcover.py  build_dsm_proxy_from_landcover_wms.py  fetch_landcover_wms.py
tests/: test_candidate_display_outputs.py  test_candidate_display_preview.py  test_candidate_map_source_zone_metadata.py  test_candidate_output_source_zones.py  test_candidate_source_zones.py  test_classification.py  test_coordinate_conversion.py  test_coordinate_io_policy.py  test_coordinates.py  test_diagnostic_appendix_cli_output.py  test_dominant_obstacle_preview_integration.py  test_fresnel.py  test_geotiff_terrain_analysis_session.py  test_geotiff_terrain_data.py  test_grid.py  test_launch_site_selection.py  test_local_candidate_source_zone_smoke.py  test_local_geotiff_adapter_smoke_cli.py  test_local_html_map_renderer.py  test_los.py  test_map_outputs.py  test_map_outputs_candidate_source_zone_properties.py  test_profile.py  (+31 more)
(+233 files in other folders)
